# popx

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README_concept.md
.devcontainer/: Dockerfile  devcontainer.json
cmake/: CodeFormatting.cmake  Options.cmake  Settings.cmake  Toolchain-x86.cmake
src/: CMakeLists.txt  cell.cpp  cell.h  common.h  console_logger.cpp  console_logger.h  grid_world.cpp  grid_world.h  i_agent.h  i_agents_manager.h  i_app.h  i_cell.h  i_entity.h  i_graphic_engine.h  i_logger.h  i_random.h  i_renderer.h  i_simulator.h  i_slice.h  i_world.h  main.cpp  pop.cpp  pop.h  pops_manager.cpp  pops_manager.h  popx_app.cpp  popx_app.h  random_utility.cpp  random_utility.h  renderer.cpp  renderer.h  sfml_graphic_engine.cpp  sfml_graphic_engine.h  simulator.cpp  simulator.h  slice.h
